# atlaspack

./: CMakeLists.txt  LICENSE  README.md  magickbackend.cpp  magickbackend.h  main.cpp
libatlaspack/: CMakeLists.txt
libatlaspack/include/AtlasPack/: Backend  Dimension  Image  JobQueue  PaintDevice  TextureAtlasPacker  atlaspack_global.h  backend.h  dimension.h  image.h  jobqueue.h  paintdevice.h  textureatlas.h  textureatlas_p.h  textureatlaspacker.h
libatlaspack/include/AtlasPack/Backends/: MagickBackend  magickbackend.h
libatlaspack/src/: backend.cpp  image.cpp  paintdevice.cpp  textureatlas.cpp  textureatlaspacker.cpp
libatlaspack/src/backends/: magickbackend.cpp
